--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -2,17 +2,24 @@
 
 *{ 
     border: 0;
+    margin: 0;
+    padding: none;
+    box-sizing: border-box;
 }
 
 body {
     background-color: hsl(217, 54%, 11%)
     }
+    .card-elements{
+        width: 300px;
+        height: 500px;
+        margin: 0 auto;
+        
+    }
 
 *{font-family: 'Roboto', sans-serif;}
 h3{ 
     color: hsl(178, 100%, 50%);
-
-
 }
 p{
     color: hsl(215, 51%, 70%);
