--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -10,12 +10,30 @@
 body {
     background-color: hsl(217, 54%, 11%)
     }
+    
+    .card
+    {background-color: hsl(216, 50%, 16%);
+    width: 450px;
+    height: 700px;
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+
+}
+    
     .card-elements{
         width: 300px;
         height: 500px;
         margin: 0 auto;
         
     }
+    .card .card-elements .elements-banner{
+       
+    height: 300px;
+    
+    width: 100%;
+    }
+    
 
 *{font-family: 'Roboto', sans-serif;}
 h3{ 
