--- a/nft-preview-card-component-main/style.css
+++ b/nft-preview-card-component-main/style.css
@@ -12,41 +12,59 @@ body {
     }
     
     .card
-    {background-color: hsl(216, 50%, 16%);
-    width: 450px;
+    {
+        font-family: 'Roboto', sans-serif;
+        background-color: hsl(216, 50%, 16%);
+    width: 400px;
     height: 700px;
     margin: 0 auto;
     position: relative;
     overflow: hidden;
-
+border-radius: 2ch;
+margin-top: 100px;
 }
     
     .card-elements{
-        width: 300px;
-        height: 500px;
-        margin: 0 auto;
         
+        margin: 0 auto;
+        width: 350px;
+        height: 500px;
+        margin-top: 20px;
     }
     .card .card-elements .elements-banner{
        
-    height: 300px;
-    
-    width: 100%;
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
+        
     }
-    
-
-*{font-family: 'Roboto', sans-serif;}
-h3{ 
-    color: hsl(178, 100%, 50%);
+    h3{ 
+    color: hsl(0, 0%, 100%);
+    margin-top: 30px;
 }
-p{
+.elements-p1{
     color: hsl(215, 51%, 70%);
-font-size: 18px;}
-.eth{ 
-    color: hsl(178, 100%, 50%);
+font-size: 20px;
+margin-top: 40px;
 }
 
-img{
-    width: 375px;
+.elements-p2{
+    color:  hsl(178, 100%, 50%);
+font-size: small; 
+margin-top: 30px; 
 
+}
+.elements-p3{
+    position: absolute;
+    right: 40px;
+    bottom: 160px;
+    color: hsl(215, 51%, 70%);
+}
+.creator{
+    color: hsl(215, 51%, 70%);
+    font-size: 20px;
+}
+footer a{
+color: hsl(178, 100%, 50%);
+font-size: small;
 }
